client/src/components/Navbar.module.css
.navbar {
  display: flex;
  align-items: center;
  background: var(--color-panel-half);
  height: 60px;
  padding: 0 var(--space-xl);
  font: var(--font-body-lg);

  /* TODO: This is a bad way to do media queries */
  @media (max-width: 1024px) {
    padding: 0 var(--space-lg);
  }

  @media (max-width: 640px) {
    height: 120px;
  }
}

.content {
  display: grid;
  grid-template-columns: 120px 1fr 120px;
  width: 100%;
  align-items: center;
  gap: var(--space-lg);

  @media (max-width: 640px) {
    grid-template-columns: 120px 1fr;
  }
}

.brand {
  margin-right: auto;
  display: flex;
  align-items: center;
  gap: var(--space-md);
  padding: var(--space-sm) var(--space-md);
  border-radius: var(--rounded);
  transition: background var(--ease-out);

  &:hover,
  &:focus {
    background: var(--color-panel);
  }
}

.links {
  display: flex;
  width: 100%;
  gap: var(--space-md);
  padding-left: rfs(2rem);
  padding-right: rfs(2rem);

  @media (max-width: 640px) {
    order: 999;
    padding-left: 0;
    padding-right: 0;
  }

  & > a {
    font: var(--font-button);
    padding: var(--space-md) var(--space-lg);
    border-radius: var(--rounded);
    background: transparent;
    transition: background var(--ease-out);

    &:hover,
    &:focus {
      background: var(--color-panel);
    }

    &:global(.active) {
      border-bottom: 4px solid var(--color-accent);
      border-radius: var(--rounded) var(--rounded) 0 0;
    }
  }
}

.buttons {
  display: flex;
  gap: var(--space-md);
  margin-left: auto;
}

